--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "magicians-red",
   "version": "0.1.0",
+  "homepage": "https://plosslaw.github.io/magicians-red",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -13,6 +14,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,5 +38,8 @@
   },
   "engines": {
     "node": "16.x"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
